# ai-app

./: .pre-commit-config.yaml  00_my_first_app.py  README.md  pyproject.toml
