[tool.poetry]
name = "ai-app"
version = "0.1.0"
description = ""
authors = ["unonao <naokiuno634@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_app"}]

[tool.poetry.dependencies]
python = "^3.11"
tiktoken = "^0.4.0"
streamlit = "^1.24.1"
langchain = "^0.0.231"
openai = "^0.27.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
isort = "^5.12.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.4.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[tool.black]
line-length = 119
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
files = ["./**/*.py"]
explicit_package_bases = true
show_error_context = true
show_column_numbers = true
warn_return_any = false
scripts_are_modules = true